# openhexa-pipelines-drc-cousp

./: .gitignore  README.md  pyproject.toml
compute_indicators_mve_tdb/: README.md  config.py  pipeline.py  requirements.txt  utils.py
dhis2_tracker_extract/: README.md  __init__.py  config.py  db_operations.py  pipeline.py  requirements.txt  toolbox.py
dhis2_tracker_extract/tests/: conftest.py  test_pipeline.py  test_toolbox.py
dse_tables_update/: pipeline.py
era5_precipitation_update/: pipeline.py
era5_temperature_update/: pipeline.py
mpox_table_update/: pipeline.py  requirements.txt  validation.py
senes_table_update/: pipeline.py  utils.py
sitrep/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
sitrep/.claude/skills/generate-sitrep/: SKILL.md
sitrep/code/: __init__.py
sitrep/code/generate_sitrep/: .gitignore  README.md  config.py  core.py  narrative.yaml  pipeline.py  requirements.txt
sitrep/code/generate_sitrep/data/: __init__.py  indicators.py  loader.py  metrics.py  model.py
sitrep/code/generate_sitrep/reporting/: __init__.py  build_template.py  charts.py  highlights.py  narrative.py  render.py  zone_map.py
sitrep/code/generate_sitrep/utils/: __init__.py  dates.py  docx.py  geo.py  numbers.py
sitrep/data/docs SitRep/: Draft_SitRep_MVE_RDC_20260519.docx
sitrep/data/extract_data_openhexa/: events.parquet  ezd_mve_consolidated.csv  mve_notification_events_sample.csv  mve_tracker_agg.csv  mve_tracker_definitif.csv  trackedEntities.csv
sitrep/data/geometry/: provinces.parquet  zone_sante.parquet
sitrep/data/templates/: Template SitRep.docx  Template_SitRep_v2.docx  Template_SitRep_v3.docx
