[project]
name = "rdc-siterep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adbc-driver-postgresql>=1.0.0",
    "adjusttext>=1.3.0",
    "connectorx>=0.4.5",
    "docxtpl>=0.20.2",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "openhexa-sdk>=2.21.0",
    "openhexa-toolbox>=2.11.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pypdf>=6.13.0",
    "python-docx>=1.2.0",
    "pyyaml>=6.0",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint]
preview = true
select = [
    "F", # Pyflakes
    "E", # pycodestyle
    "I", # isort
    "D", # pydocstyle
    "UP", # pyupgrade
    "ANN", # flake8-annotations
    "B", # bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "FA", # flake8-future-annotations
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "NPY", # NumPy rules
    "PD", # pandas rules
    "N", # pep8-naming
    "DOC", # pydoclint
    "PLC", # pylint convention
    "PLE", # pylint error
    "PLW", # pylint warning
    "RUF", # ruff specific rules
]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D401", # First line should be in imperative mood
    "D413", # Missing blank line after last section
    "D203", # 1 blank line required before class docstring
    "SIM108", # Use ternary operators
    "SIM102", # Use a single if statement instead of nested if statements
    "SIM114", # Combine `if` branches
    "DOC501", # Raised exception {id} missing from docstring
    "DOC502", # Raised exception is not explicitly raised: {id}
    "D213", # Multi-line docstring summary should start at the second line (incompatible avec D212)
    "RUF022", # `__all__` is not sorted
    "RUF005", # Consider expression instead of concatenation
    "RUF069", # Unreliable floating point equality comparison
    "PLR0904", # Too many public methods ({methods} > {max_methods})
    "PLR0911", # Too many return statements ({returns} > {max_returns})
    "PLR0912", # Too many branches ({branches} > {max_branches})
    "PLR0913", # Too many arguments ({arguments} > {max_arguments})
    "PLR0914", # Too many local variables ({variables} > {max_variables})
    "PLR0915", # Too many statements ({statements} > {max_statements})
    "PLR0916", # Too many Boolean expressions ({expressions} > {max_expressions})
    "PLR1702", # Too many nested blocks ({blocks} > {max_blocks}),
    "COM812", # Missing trailing comma
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true

[tool.hatch.build.targets.wheel]
packages = ["code"]

[tool.pytest.ini_options]
# Le package utilise des imports « bare » (``import config``) ; on ajoute le
# dossier du package au path et on force ``importlib`` pour éviter la collision
# de nom avec le module stdlib ``code``. Permet ``uv run pytest`` depuis la racine.
pythonpath = ["code/generate_sitrep"]
addopts = "--import-mode=importlib"
testpaths = ["code/generate_sitrep/tests"]
